tests/fixtures/negative/empty-blocks/EmptyCatchBlock.kt
package fixtures.negative.emptyblocks

fun handleError() {
    try {
        riskyOperation()
    } catch (e: Exception) {
        log(e)
    }
}
